# CloudFelgo

./: CMakeLists.txt  main.cpp
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
qml/: Main.qml  config.json
