cmake_minimum_required(VERSION 3.16)

project(runAppBeta VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Felgo REQUIRED)

set(PRODUCT_IDENTIFIER "com.vinix.runApp")
set(PRODUCT_VERSION_NAME "1.0.0")
set(PRODUCT_VERSION_CODE 1)

set(PRODUCT_STAGE "test")


set(PRODUCT_LICENSE_KEY "BCD4F68FF1BFFA295C310DD188F313822ECB8968F4CB5D99BAD551EE8E3CFBE53ED8BCD2C46EA49B0670830641EC41E919C3CA9230D819A0756597DF9922ECFD4BBF3663139C177590F41F13A23C5D58C7F1557F0B4DC0368D3723DBCD0B553A297ECDC49D37E95202A358B48FE3AF4D1BFAE1EBA32CDA565A61EE02C7AC56144A593F64CC230FC461DE2126E67A3156C05393766ABAB0BC5DA1B67DA3A591BD6A8D350BFDBED0FA2207F073F3F05A1C5517E3BDA8B4134D0E4950CFA7DAC447DECF2E0CF5301D15927A625A1A6DFDB381AD5F7F1B3E509D8E0B7E48A3058B65DC6195CB64572A94B74C3A8943F1D682D5E256294E50A50E734C40793C312D999B87320E41C6070501E69CF3573A7215704AE231E2DBE2E1E2A6EEBC654217984685ABB436342D872EC77D746994194E")

set(FELGO_PLUGINS
)

file(GLOB_RECURSE QmlFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} qml/*.qml qml/*.js)

file(GLOB_RECURSE AssetsFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} assets/* qml/*)
list(REMOVE_ITEM AssetsFiles ${QmlFiles})

qt_add_executable(runAppBeta
    main.cpp
    ${QmlFiles}
    ${AssetsFiles}
)

felgo_configure_executable(runAppBeta)

deploy_resources("${QmlFiles};${AssetsFiles}")

qt_add_qml_module(runAppBeta
    URI runAppBeta
    VERSION 1.0
    QML_FILES ${QmlFiles}
    RESOURCES ${AssetsFiles}
    NO_RESOURCE_TARGET_PATH
)

target_compile_definitions(runAppBeta
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(runAppBeta PRIVATE Felgo)

#find_package(FelgoLive REQUIRED)
#target_link_libraries(runAppBeta PRIVATE FelgoLive)
