cmake_minimum_required(VERSION 3.16)

project(runAppBeta VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Felgo REQUIRED)

set(PRODUCT_IDENTIFIER "com.vinix.runApp")
set(PRODUCT_VERSION_NAME "1.0.0")
set(PRODUCT_VERSION_CODE 1)

set(PRODUCT_STAGE "test")

set(PRODUCT_LICENSE_KEY "06AA52688F5974A8A461143220C4A726EB8BBB843120991F9CB60B8A550832C643583AC645D89B65AF082A54D0CD179DB56368EF196B6E21F70B72D17EC05FB06CF58F9424877B5AD6215DB98C278E8FC8D0DCFB64FA1AD28CDBE6B1B7EA94E6DF61BB5705C7948D78A7D887772A93AADB9DC8085B4DCD058CAA5AF23FAD03F00E3A1FD34342ABECB0BEEA2894D2FE7B52E20A2937C7281243CF33E5E847D4158766E17353DDC6AD631CC019ACBD79B97BB53BD6AB285A4642553BFF8AF702CB7D9B3586B1845FA8626491900D18AFB0F8F2266130D8CA2EF3A736D0DDC46CFDB3BEAD5BAF40B43DE0B29F56E45089D4780A0BF1CBFDC550CD7395422986C799E252B217970186D2D2DB09BDC68451787320B4984CE07E2DEED27C000F6A252783E3CF01BF35D00B5872D2B094E43A41939F1C0E63741486023CDD7C08B49BC0")

set(FELGO_PLUGINS
)

file(GLOB_RECURSE QmlFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} qml/*.qml qml/*.js qml/*.mjs)

file(GLOB_RECURSE AssetsFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} assets/* qml/*)
list(REMOVE_ITEM AssetsFiles ${QmlFiles})

qt_add_executable(runAppBeta
    main.cpp
    ${QmlFiles}
    ${AssetsFiles}
)

felgo_configure_executable(runAppBeta)

deploy_resources("${QmlFiles};${AssetsFiles}")

qt_add_qml_module(runAppBeta
    URI runAppBeta
    VERSION 1.0
    QML_FILES ${QmlFiles}
    RESOURCES ${AssetsFiles}
    NO_RESOURCE_TARGET_PATH
)

target_compile_definitions(runAppBeta
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(runAppBeta PRIVATE Felgo)

#find_package(FelgoLive REQUIRED)
#target_link_libraries(runAppBeta PRIVATE FelgoLive)
